# SQL-Query-Optimization-Environment

./: .gitignore  Dockerfile  LICENSE  README.md  WHERE_TO_LOOK.md  baseline_runner.py  env.py  executor.py  graders.py  inference.py  inspect_schema.py  leaderboard.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_env.py  test_samples.py  train.py  train_colab.ipynb
.github/workflows/: ci.yml
docs/: design.md  results.md  training.md
results/: baseline_results.json  before_after_eval.json  before_after_table.md
runs/demo_fallback/: replay.html  replay.json
scripts/: ablation.py  export_replay.py
server/: app.py  demo.html
tests/: test_smoke.py
training/: eval_before_after.py
